[gd_scene load_steps=7 format=3 uid="uid://bt2k7hof7sakh"]

[ext_resource type="Script" uid="uid://du8j6m4iym2tf" path="res://source/screens/menus/pant_principal.gd" id="1_ut4m4"]
[ext_resource type="Texture2D" uid="uid://c3v7cdacugfc3" path="res://resources/images/FiveNigths.jpg" id="3_o7wbf"]
[ext_resource type="AudioStream" uid="uid://1ehnfoqqyg11" path="res://resources/audio/musica/Main Menu.mp3" id="4_atong"]
[ext_resource type="Theme" uid="uid://tanh1kklj0vh" path="res://source/screens/menus/pant_principal_tema.tres" id="4_y8nws"]

[sub_resource type="Gradient" id="Gradient_0m4t8"]
offsets = PackedFloat32Array(0.0324675, 0.454545)
colors = PackedColorArray(0.445626, 0.0175171, 0.104678, 1, 0, 0, 0, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 11

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a3kqj"]
gradient = SubResource("Gradient_0m4t8")

[node name="PantPrincipal" type="Node2D"]
script = ExtResource("1_ut4m4")

[node name="Panel" type="Panel" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="Musica" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("4_atong")
volume_db = -10.0
autoplay = true
bus = &"Musica"
parameters/looping = true

[node name="Fondo" type="Sprite2D" parent="Panel"]
position = Vector2(640, 359.875)
scale = Vector2(5, 720.25)
texture = SubResource("GradientTexture1D_a3kqj")

[node name="FNAH" type="Sprite2D" parent="Panel"]
position = Vector2(892, 357)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_o7wbf")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 664.0
theme_override_constants/separation = 90
alignment = 1

[node name="btn_iniciar" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_salir")
focus_neighbor_bottom = NodePath("../btn_continuar")
theme = ExtResource("4_y8nws")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
text = "btn_iniciar"

[node name="btn_continuar" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_iniciar")
focus_neighbor_bottom = NodePath("../btn_config")
theme = ExtResource("4_y8nws")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
text = "btn_continuar"

[node name="btn_config" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_continuar")
focus_neighbor_bottom = NodePath("../btn_creditos")
theme = ExtResource("4_y8nws")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
text = "btn_config"

[node name="btn_creditos" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_config")
focus_neighbor_bottom = NodePath("../btn_salir")
theme = ExtResource("4_y8nws")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
text = "btn_creditos"

[node name="btn_salir" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_creditos")
focus_neighbor_bottom = NodePath("../btn_iniciar")
theme = ExtResource("4_y8nws")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
text = "btn_salir"

[node name="TimerVideoIntro" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="pressed" from="Panel/VBoxContainer/btn_iniciar" to="." method="_on_btn_iniciar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/btn_continuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/btn_config" to="." method="_on_btn_config_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/btn_creditos" to="." method="_on_btn_creditos_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/btn_salir" to="." method="_on_btn_salir_pressed"]
[connection signal="timeout" from="TimerVideoIntro" to="." method="_on_timer_video_intro_timeout"]
